# MiddleProject

./: conftest.py  pyproject.toml  pytest.ini
context/: basemodel_context.py  page_context.py
pages/: base_page.py  contacts_page.py  login_page.py  main_page.py  page_components.py  page_context.py  settings_page.py
pages/components/: base_components.py  layout_menu_components.py
pages/elements/: button.py  href.py  iframe.py
pages/mail_pages/: drafts_page.py  inbox_page.py  main_page.py  sent_page.py
pages/mail_pages/components/: folder_list_components.py
src/models/: app_context.py  user.py
tests/ui/: conftest.py  test_login_page.py  test_mail_page.py  test_main_page.py  test_settings_page.py
