[project]
name = "middleproject"
version = "0.1.0"
description = "Project for grade middle"
authors = [
    {name = "Bazhenov Roman",email = "thebazhenov@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright (>=1.55.0,<2.0.0)",
    "allure-pytest (>=2.15.0,<3.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pydantic (>=2.12.3,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
